# photobooth

./: .gitignore  DESIGN.md  README.md  pyproject.toml
BoothClient/: Api_Thread.py  BoothClient.py  rssh.py
connectionWIFI/: connect.py  connexionAP.py  dhcpdnsmasq.py
connectionWIFI/static/css/: style.css
connectionWIFI/templates/: index.html
photobooth/: photobooth.py  testres.py  utils.py  utils_image.py
photobooth/Engine/: Engine.py  State.py
photobooth/Engine/Camera/: Camera.py  Capture.py  Preview.py
photobooth/Engine/Vue/: Fonts.py  Template.py  Vue.py  colors.py
photobooth/json/: font.json  key  sequence.json  settings.json  template.json
